<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation" >
	<string name="account_type" translatable="false">org.grameenfoundation.fdpciv.login</string>
	<string name="app_name" translatable="false"><b>FDP CIV</b></string>
	<string name="app_package" translatable="false">org.grameenfoundation.fdpciv</string>
    <string name="switch_user_button">Switch User</string>
    <string name="internalInspection">Internal Inspection</string>
    <string name="action_search">Search</string>
	<string name="action_refresh">Synchronize</string>
	<string name="action_add">Add Farmer</string>
	<string name="no_results_found">No results found</string>
	<string name="main_activity_title">Farmer List</string>
	<string name="plotActivityTitle">Plot information</string>
	<string name="fdpActivityTitle">Farm Development Plan</string>
	<string name="yearDetailActivityTitle">Year Detail</string>
	<string name="logout_title" translatable="false">Log out?</string>
	<string-array name="yes">
		<item>Yes</item>
		<item>No</item>
	</string-array>
	<string name="cancel">No</string>
    <string name="saveContinue">Save and Continue</string>
	<string name="finish">Finish</string>
	<string name="back">Back</string>
    <string name="takePhoto">Take Photo</string>
    <string name="takeAgree">Agree with photo</string>
	<string name="save">Save</string>
	<string name="farmerProfile">FARMER FAMILY PROFILE</string>
	<string name="socioeconomicProfile">SOCIOECONOMIC PROFILE</string>
	<string name="farmingProfile">FARMING ECONOMIC PROFILE</string>
	<string name="productiveProfile">PRODUCTIVE PROFILE</string>
	<string name="plotInformation">PLOT INFORMATION</string>
	<string name="ao">ADOPTION OBSERVATIONS</string>
    <string name="aoResults">ADOPTION OBSERVATION RESULTS</string>
	<string name="additionalIntervention">ADDITIONAL INTERVENTION</string>
	<string name="full_name">1. Farmer name:</string>
	<string name="farmer_code">2. Farmer or farm code:</string>
	<string name="birthday">3. Date of birth (year):</string>
	<string-array name="gender">
		<item>N/A</item>
		<item>Male</item>
		<item>Female</item>
	</string-array>
	<string name="educational_level">5. Educational level:</string>
	<string name="village">6. Village:</string>
	<string name="gps">7.House location:</string>
	<string name="getLocation">Get location</string>
    <string name="postalAddress">8. Postal address:</string>
    <string name="phone">9. Phone number:</string>
	<string name="yearsRelationshipWithMars">10. Year started working with or selling to the company:</string>
	<string name="haveSpouse">11. Spouse:</string>
	<string name="numberSpouses">C1. Number of spouses:</string>
	<string name="spouseName">C2. Spouse name:</string>
	<string name="spouseBirthday">C3. Spouse date of birth (year):</string>
	<string name="spouseEducationalLevel">C4. Spouse educational level:</string>
	<string name="numberChildren">12. Total number of children:</string>
	<string name="childrenUnder">C5. Children between 6 to 15 years old:</string>
	<string name="childrenInSchool">C6. Children between 6 to 15 years old enrolled in school:</string>
	<string name="familyMembers">13. Number of household members including the farmer:</string>
	<string name="farmerGroup">14. Member of Farmer Group</string>
	<string name="familyPhoto">Click to take a family photo</string>
	<string name="fmWorkFarm">15. How many household members (excluding the farmer) work on the farm without paid wages?</string>
	<string name="dependEconomically">16. How many household members (including the farmer) depend on the total household income?</string>
	<string name="receivesFarmPayment">17. Does any member of the HH from earn income for any work, including farming?</string>
    <string name="totalIncomeLabor">C7. Apart from farming cocoa and other crops, how much income does the farmer earn from other sources in a year?</string>
	<string name="spousePaidWork">C8. Apart from farming cocoa and other crops, does the spouse earn income from other sources?</string>
    <string name="totalSpouseIncome">C9. How much income does the spouse earn from other sources in a year?</string>
	<string name="familyPaidWork">18. Does the other household members contribute to the household income?</string>
    <string name="totalFamilyMembersIncome">C10. How much income does the other household members contribute in a year?</string>
    <string name="haveCredit">19. Does the household have a loan that needs to be paid back?</string>
    <string name="totalCredit">C11. How much do you still have to pay back?</string>
    <string name="sourceCredit">C12. Where did you get the loan?</string>
    <string name="payOftenForCredit">C13. How often do you pay back?</string>
    <string name="payForCredit">C14. How much do you pay back per payment?</string>
    <string name="giveLoan">20. Has the household given a loan?</string>
    <string name="amountOfLoan">C15. How much does the lender have to pay back?</string>
    <string name="moneyBack">C16. How much do they pay back?</string>
    <string name="householdSavings">21. Household savings:</string>
    <string name="livingExpenses">22. How much does the household spend on food, utilities, housing, and transit in a year?</string>
    <string name="otherExpenses">23. How much does the household spend on other expenses (excluding education) in a year?</string>
    <string name="plannedInvestments">24. Does the household have any planned investments? If so, how much have they allocated for the investment?</string>
    <string name="educationExpenses">25. How much will the household spend on education next year? (school fees, books, uniforms, payment for dormitory etc.) </string>
	<string name="bankAccount">26. Does the farmer have a bank account?</string>
	<string name="accountType">C17. Account type</string>
	<string name="mobileMoney">C18. Does the farmer account have a mobile money option?</string>
	<string name="wantAccount">C19. Want a bank account?</string>
    <string name="measure">27. Units of measure</string>
    <string name="area">Area</string>
    <string name="weight">Weight</string>
    <string name="bagClarify">*bag = 62.5kg bag</string>
	<string name="qqClarify">*Qq = 100kg</string>
	<string name="acClarify">*ha = 2.47105 ac</string>
    <string name="productionCocoaLY">28. What is your total production of dry cocoa beans in a crop year or calendar year?</string>
    <string name="averageCocoaPrice">29. What is the average farm gate dry bean cocoa price per kg for last year?</string>
	<string name="expensesCocoaLY">30. How much did you spend on cocoa farm INPUTS in the past year i.e. fertilizer, pesticides etc. (year means past two seasons, mid and main crop)?</string>
	<string name="grossCocoaLY">31. How much income did you earn from cocoa in the past year (year means past two seasons, mid and main crop)?</string>
	<string name="haveOtherCrops">32. Do you have additional crops?</string>
	<string name="incomeOtherCrops">C20. How much income did you earn from other crops in the past year? (year means past two seasons, mid and main crop)</string>
	<string name="additionalCrops">C21. Additional crops:</string>
	<string name="mapPhoto">Click to take a photo of the farm map</string>
	<string name="farmAge">33. Year of farm establishment (first time something was planted)</string>
    <string name="farmCertifications">34. Farm certifications:</string>
    <string name="farmArea">35. Total land ownership or availability size </string>
    <string name="cultivationArea">36. Total land under cultivation size </string>
    <string name="cocoaArea">37. Total land under cocoa size </string>
    <string name="renovationArea">38. Total cocoa planting already under renovation size </string>
    <string name="numberPlots">39. Number of plots:</string>
	<string name="plotGPS">40. Plot GPS:</string>
    <string name="plotArea">41. Plot size </string>
    <string name="estimatedProduction">42. Estimated production size in </string>
    <string name="ph">43. Soil PH:</string>
    <string name="plantingMaterial">44. Planting material:</string>
    <string name="cocoaTrees">45. Tree density:</string>
    <string name="plotAge">46. Tree age:</string>
    <string name="treeHealth">47. Tree health:</string>
    <string name="debilitationDisease">48. Debilitating disease (CSSV):</string>
    <string name="pruning">49. Pruning:</string>
    <string name="pestDiseaseSanitation">50. Pest and disease and sanitation:</string>
    <string name="weeding">51. Weeding:</string>
    <string name="harvesting">52. Harvesting:</string>
    <string name="shadeManagement">53. Shade management:</string>
    <string name="soilCondition">54. Soil condition:</string>
    <string name="organicMatter">55. Organic matter:</string>
    <string name="fertilizerFormulation">56. Fertilizer formulation:</string>
    <string name="fertilizerApplication">57. Fertilizer application:</string>
    <string name="limeNeed">58. Lime need:</string>
    <string name="drainageNeed">59. Drainage need:</string>
    <string name="fillingOption">60. Filling in or thinning out option:</string>
    <string name="plotHireLabor">61. Hire labor:</string>
	<string name="geneticLb">Genetics of plant material:</string>
	<string name="farmCondition">Farm condition:</string>
	<string name="gapLb">GAPS:</string>
	<string name="soilFertMngLb">Soil fertility management:</string>
	<string name="calcAO">Calculate</string>
    <string name="startYear">Start Year</string>
    <string name="year">YEAR </string>
	<string name="year0">Year 0</string>
    <string-array name="year1">
        <item>Year 1</item>
        <item>Year 2</item>
        <item>Year 3</item>
        <item>Year 4</item>
        <item>Year 5</item>
        <item>Year 6</item>
        <item>Year 7</item>
    </string-array>
    <string-array name="year2">
        <item>Year 2</item>
        <item>Year 1</item>
        <item>Year 3</item>
        <item>Year 4</item>
        <item>Year 5</item>
        <item>Year 6</item>
        <item>Year 7</item>
    </string-array>
    <string-array name="year3">
        <item>Year 3</item>
        <item>Year 1</item>
        <item>Year 2</item>
        <item>Year 4</item>
        <item>Year 5</item>
        <item>Year 6</item>
        <item>Year 7</item>
    </string-array>
    <string-array name="year4">
        <item>Year 4</item>
        <item>Year 1</item>
        <item>Year 2</item>
        <item>Year 3</item>
        <item>Year 5</item>
        <item>Year 6</item>
        <item>Year 7</item>
    </string-array>
    <string-array name="year5">
        <item>Year 5</item>
        <item>Year 1</item>
        <item>Year 2</item>
        <item>Year 3</item>
        <item>Year 4</item>
        <item>Year 6</item>
        <item>Year 7</item>
    </string-array>
    <string-array name="year6">
        <item>Year 6</item>
        <item>Year 1</item>
        <item>Year 2</item>
        <item>Year 3</item>
        <item>Year 4</item>
        <item>Year 5</item>
        <item>Year 7</item>
    </string-array>
    <string-array name="year7">
        <item>Year 7</item>
        <item>Year 1</item>
        <item>Year 2</item>
        <item>Year 3</item>
        <item>Year 4</item>
        <item>Year 5</item>
        <item>Year 6</item>
    </string-array>
	<string name="plotIncome">Plot Income:</string>
	<string name="costInvest">Cost of Maintenance / Investment:</string>
	<string name="manDaysNeed" translatable="false">Labor needed in man days:</string>
	<string name="costLabor">Cost of labor:</string>
	<string name="plotPL">Plot P&amp;L:</string>
	<string name="changeR">Change for Replanting</string>
	<string name="changeFilling">Change for Filling in</string>
    <string name="changeThinning">Change for Thinning out</string>
	<string name="netPlotIncome">Gross income from Cocoa:</string>
    <string name="netOtherCrops">Net income from Other Crops:</string>
</resources>